fixing collapsing widget staying open

--- a/public/css/form.css
+++ b/public/css/form.css
@@ -241,7 +241,7 @@ form .has-error input {
     display: none;
 }
 
-.panel-collapse.collapse.show, .panel-collapse.collapse.in {
+.panel-collapse.collapse.show {
     display: block;
 }
 
